--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ header {
   justify-content: space-between;
   align-items: center;
   z-index: 10000;
+  overflow-x: hidden;
 }
 header .logo {
   color: #fff;
